# aiorobokassa

./: .gitignore  .readthedocs.yaml  Makefile  README.md  pyproject.toml
aiorobokassa/: __init__.py  client.py  constants.py  enums.py  exceptions.py
aiorobokassa/api/: _protocols.py  base.py  invoice.py  payment.py  refund.py
aiorobokassa/contrib/: __init__.py
aiorobokassa/models/: __init__.py  requests.py
aiorobokassa/utils/: helpers.py  signature.py  xml.py
docs/: conf.py  index.rst  requirements.txt
docs/examples/: django.rst  fastapi.rst  flask.rst
docs/guides/: notifications.rst  payments.rst  refunds.rst
tests/: conftest.py  test_api_invoice.py  test_api_payment.py  test_api_refund.py  test_models.py  test_receipt.py  test_receipt_with_models.py  test_utils_signature.py
